Fix grid alignment. No longer off-center

--- a/styles.css
+++ b/styles.css
@@ -10,21 +10,21 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 10px;
     height: 100%;
 }
 
 .grid-container {
     display: flex;
-    max-height: 100%;
     flex-wrap: wrap;
     margin: 0 20px 20px 20px;
+    flex: 1;
 }
 
 button {
     width:150px;
     margin-top: 20px;
+    align-self: center;
 }
 
 .column {
